Use valueOf instead of new object constructor for performance.